--- a/kube/frontend.local.dev.yaml
+++ b/kube/frontend.local.dev.yaml
@@ -1,3 +1,5 @@
+#  THIS DOES NOT WORK DUE TO CI LOGIN
+
 kind: Service
 apiVersion: v1
 metadata:
@@ -14,30 +16,6 @@ spec:
       targetPort: 80
   selector:
     k8s-app: aaasf
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: aaasf
-  namespace: aaasf
-  labels:
-    k8s-app: aaasf
-  annotations:
-    kubernetes.io/ingress.class: slate
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-spec:
-  tls:
-    - hosts:
-        - aaas.atlas-ml.org
-      secretName: auto-generated-aaasf
-  rules:
-    - host: aaas.atlas-ml.org
-      http:
-        paths:
-          - path: /
-            backend:
-              serviceName: aaasf
-              servicePort: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -59,7 +37,7 @@ spec:
       containers:
         - name: aaasf
           image: ivukotic/aaasf:dev
-          imagePullPolicy: Always
+          imagePullPolicy: Never
           ports:
             - containerPort: 80
           livenessProbe:
@@ -82,5 +60,3 @@ spec:
                   name: globus-secret
               - secret:
                   name: config
-              # - secret:
-              #     name: mg-config
