--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alarmalertservicefrontend",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "a frontend for ATLAS Alarm and Alert Services.",
   "main": "server.js",
   "scripts": {
@@ -25,23 +25,23 @@
   },
   "homepage": "https://github.com/ATLAS-Analytics/AlarmAlertServiceFrontend#readme",
   "dependencies": {
-    "@elastic/elasticsearch": "^7.14.0",
-    "body-parser": "^1.19.0",
+    "@elastic/elasticsearch": "^7.16.0",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
     "cookies": "^0.8.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-session": "^1.17.2",
     "https": "^1.0.0",
     "lodash": ">=4.17.21",
     "mailgun-js": "^0.22.0",
-    "npm": "^8.1.3",
+    "npm": "^8.3.0",
     "pug": "^3.0.2",
-    "request": "^2.88.2",
     "requests": "^0.3.0",
     "requires": "^1.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.3"
+    "eslint-plugin-import": "^2.25.4"
   }
 }
