--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -32,6 +32,6 @@ jobs:
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.AAAS_GITOPS_DEPLOY_TRIGGER }}
-          repository: maniaclab/flux_af
+          repository: maniaclab/river_apps
           event-type: gitops-aaasf-app-trigger-dev
           client-payload: '{"ref": "${{ steps.extract_tag_name.outputs.imagetag }}"}'
